[tool.poetry]
name = "flask-bank-system"
version = "0.1.0"
description = ""
authors = ["javiercornejo <javier.cornejo.md@ucacue.edu.ec>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.2"
sqlalchemy = "^2.0.28"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
marshmallow = "^3.21.1"
flask-migrate = "^4.0.7"
flask-jwt-extended = "^4.6.0"
dependency-injector = "^4.41.0"
flask-restx = "^1.3.0"
marshmallow-sqlalchemy = "^1.0.0"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
flask-cors = "^4.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
